welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:11: error: not found: value i
  if ( i >= 3 ){
       ^